--- a/project.config.json
+++ b/project.config.json
@@ -9,7 +9,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.9.93",
-	"appid": "wx19d7fa6d7433b2af",
+	"appid": "wx6f3a37b849e76722",
 	"projectname": "%E8%8D%89%E6%A0%B9%E5%9B%A2",
 	"isGameTourist": false,
 	"condition": {
